--- a/īndex.css
+++ b/īndex.css
@@ -32,8 +32,9 @@
     cursor: pointer;
 }
 
-.search {
-    padding: 30px;
+.filter-button {
+    margin: 10px;
+    cursor: pointer;
 }
 
 .res-logo {
