--- a/īndex.css
+++ b/īndex.css
@@ -20,7 +20,7 @@
     margin: 10px;
 }
 
-.res-card, .shimmer-container {
+.res-card, .shimmer-card {
     width: 200px;
     padding: 10px;
     background-color: cadetblue;
@@ -42,7 +42,7 @@
     height: 150px;
 }
 
-.restaurant-card, .shimmer-card {
+.restaurant-card, .shimmer-container {
     display: flex;
     flex-wrap: wrap;
 }
