--- a/īndex.css
+++ b/īndex.css
@@ -20,8 +20,16 @@
     margin: 10px;
 }
 
-.res-card, .shimmer-card {
+.res-card{
     width: 200px;
+    padding: 10px;
+    background-color: cadetblue;
+    margin: 5px;
+}
+
+.shimmer-card {
+    width: 200px;
+    height: 300px;
     padding: 10px;
     background-color: cadetblue;
     margin: 5px;
@@ -50,4 +58,9 @@
 .login-button {
     margin: 5px;
     height: 50px;
+}
+
+.search-button {
+    cursor: pointer;
+    margin: 5px;
 }
