--- a/īndex.css
+++ b/īndex.css
@@ -1,10 +1,3 @@
-.app-header {
-    display: flex;
-    justify-content: space-between;
-    border: 1px solid black;
-    padding-left: 1rem;
-}
-
 .title-container {
     width: 130px;
     font-family: 'Poppins';
@@ -25,27 +18,27 @@
     border: none;
     position: static;
     width: auto;
-}
-
-.nav-items > ul {
     display: flex;
-    font-size: 25px;
-    padding: 0px 50px;
-    list-style-type: none;
+    justify-content: space-between;
+    padding-left: 1rem;
 }
 
-.nav-items > ul > li{
-    padding: 10px;
-    margin: 10px;
+.section-layout {
+    color: gray;
 }
 
 .res-card {
     border-radius: 1.5rem;
-    width: 200px;
     padding: 10px;
-    background-color: white;
+    background-color: whitesmoke;
     margin: 5px;
-    border: 2rem;
+    width: 255px;
+    height:80px;
+    border: 2rem, solid;
+}
+
+.admin, .member, .hr-line {
+    margin: 30px;
 }
 
 .res-card:hover {
@@ -53,14 +46,24 @@
     cursor: pointer;
 }
 
-.filter-button {
-    margin: 10px;
-    cursor: pointer;
+.image-content {
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    padding: 5px;
 }
 
-.res-logo {
-    width: 100%;
-    height: 150px;
+.image-content, .name-content {
+    display: inline-block;
+}
+
+.email-content {
+    margin-block-start: 10px;
+    color: grey;
+}
+
+.name-content {
+    margin-inline-start: 10px;
 }
 
 .admin-card, .member-card {
