--- a/īndex.css
+++ b/īndex.css
@@ -16,6 +16,7 @@
     padding: 0.3rem;
     padding-left: 25px;
     border: 0.1rem;
+    font-family: 'Poppins';
 }
 
 .app-header {
@@ -37,8 +38,8 @@
     padding: 10px;
     background-color: whitesmoke;
     margin: 5px;
-    width: 255px;
-    height:80px;
+    width: 260px;
+    height:85px;
     border: 2rem, solid;
 }
 
@@ -59,6 +60,7 @@
 }
 
 .image-content, .name-content {
+    font-family: 'Poppins';
     display: inline-block;
 }
 
